@@ -34,6 +34,11 @@
 	"apihelp-block-param-watchuser": "{{doc-apihelp-param|block|watchuser}}",
 	"apihelp-block-example-ip-simple": "{{doc-apihelp-example|block}}",
 	"apihelp-block-example-user-complex": "{{doc-apihelp-example|block}}",
+	"apihelp-checktoken-description": "{{doc-apihelp-description|checktoken}}",
+	"apihelp-checktoken-param-type": "{{doc-apihelp-param|checktoken|type}}",
+	"apihelp-checktoken-param-token": "{{doc-apihelp-param|checktoken|token}}",
+	"apihelp-checktoken-param-maxtokenage": "{{doc-apihelp-param|checktoken|maxtokenage}}",
+	"apihelp-checktoken-example-simple": "{{doc-apihelp-example|checktoken}}",
 	"apihelp-clearhasmsg-description": "{{doc-apihelp-description|clearhasmsg}}",
 	"apihelp-clearhasmsg-example-1": "{{doc-apihelp-example|clearhasmsg}}",
 	"apihelp-compare-description": "{{doc-apihelp-description|compare}}",
@@ -626,6 +631,7 @@
 	"apihelp-query+info-paramvalue-prop-readable": "{{doc-apihelp-paramvalue|query+info|prop|readable}}",
 	"apihelp-query+info-paramvalue-prop-preload": "{{doc-apihelp-paramvalue|query+info|prop|preload}}",
 	"apihelp-query+info-paramvalue-prop-displaytitle": "{{doc-apihelp-paramvalue|query+info|prop|displaytitle}}",
+	"apihelp-query+info-param-testactions": "{{doc-apihelp-param|query+info|testactions}}",
 	"apihelp-query+info-param-token": "{{doc-apihelp-param|query+info|token}}",
 	"apihelp-query+info-example-simple": "{{doc-apihelp-example|query+info}}",
 	"apihelp-query+info-example-protection": "{{doc-apihelp-example|query+info}}",
